# fastapi-cognito-security

./: README.md  requirements.dev.txt  setup.cfg
.github/workflows/: pythonpackage.yml
fastapi_cognito_security/: __init__.py
