[metadata]
name = fastapi-cognito-security
author = QuiNovas
author_email = pypi@quinovas.com
version = 0.0.2
description = A FastAPI Security object for AWS Cognito - supports both access and id tokens
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license_file = LICENSE
url = https://github.com/QuiNovas/fastapi-cognito-security
keywords = fastapi, cognito
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = true
install_requires = 
    cognitojwt[async]
    fastapi
python_requires = >=3.9
